[gd_scene load_steps=2 format=3 uid="uid://b7pa2cui13uhl"]

[ext_resource type="Script" uid="uid://067pbtc24ygr" path="res://Assets/Scenes/LevelSelect/level_select.gd" id="1_rqibm"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqibm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Level1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Level2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Level3Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Level4Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Level5Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Level6Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Level7Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
